methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:8: error: not found: value FaireV
  FaireV()
  ^